--- a/md-api-tests/packages.config
+++ b/md-api-tests/packages.config
@@ -6,6 +6,7 @@
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.7" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net472" developmentDependency="true" />
   <package id="RestSharp" version="106.10.1" targetFramework="net472" />
   <package id="SlowCheetah" version="2.5.48" targetFramework="net472" />
